[package]
name = "bittorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11"
reqwest = { version = "0.11.22", features = ["blocking", "json"]}
sha1 = "0.10.6"
urlencoding = "2.1.3"
hex = "0.4.3"
